 - GBA Video: Fix mode 2 out-of-bounds VRAM crash
 - GBA Video: Fix regression adjusting brightness of backdrop
 - DS GX: Properly reject invalid commands
 - DS: Fix leaking BIOS and firmware filehandles
 - DS: Fix freeing memory for partial BIOS on load failure
 - DS Video: Properly deinitialize
 - DS GX: Mask off invalid bits of the palette base
 - DS: Properly close save file on close
Misc:
 - DS GX: Clean up and unify texture mapping
 - DS Core: Add symbol loading
 - DS Video: Simplify VRAM mapping
 - DS GX: Reject and log polygons that clip to more than 10 vertices

0.9.0: (Future)
Features:
 - e-Reader card scanning
 - Add WebP and APNG recording
 - Support for unlicensed Pokemon Jade/Diamond Game Boy mapper
Emulation fixes:
 - ARM: Fix ALU reading PC after shifting
 - ARM: Fix STR storing PC after address calculation
 - ARM: Fix LDM^ writeback to user-mode register
 - ARM: Fix LDM^ {pc} differences (fixes mgba.io/i/1698)
 - ARM: Fix edge case with Thumb SBC flags (fixes mgba.io/i/1818)
 - GB: Partially fix timing for skipped BIOS
 - GB Memory: Fix OAM DMA from top 8 kB
 - GB MBC: Fix MBC1 mode changing behavior
 - GB MBC: Fix MBC1 RAM enable bit selection
 - GB MBC: Fix MBC2 bit selection
 - GB Video: Fix state after skipping BIOS (fixes mgba.io/i/1715 and mgba.io/i/1716)
 - GB Video: Always initialize palette
 - GBA: Fix timing advancing too quickly in rare cases
 - GBA BIOS: Implement dummy sound driver calls
 - GBA BIOS: Improve HLE BIOS timing
 - GBA BIOS: Fix reloading video registers after reset (fixes mgba.io/i/1808)
 - GBA DMA: Linger last DMA on bus (fixes mgba.io/i/301 and mgba.io/i/1320)
 - GBA Memory: Improve gamepak prefetch timing
 - GBA Memory: Stall on VRAM access in mode 2 (fixes mgba.io/i/190)
 - GBA SIO: Fix copying Normal mode transfer values
 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
 - GBA Video: Fix Hblank timing
 - GBA Video: Fix invalid read in mode 4 mosaic
 - GBA Video: Fix color of disabled screen